--- a/en/flows/06.12-Adding Labels to Responses.md
+++ b/en/flows/06.12-Adding Labels to Responses.md
@@ -1,17 +1,32 @@
-Use the Create Label action to label the received messages processed on the flow. Consider that the contacts groups classification allow the contact segmentation based on your responses, labeling the received messages allows to isolate the responses of a specific question. Messages label can be seen - and created - in the split messages.
+Use the Create Label action to label the received messages processed on the flow. Consider that the contacts groups classification allows the contact segmentation based on your responses, labeling the received messages allows to isolate the responses of a specific question. Messages label can be seen - and created - in the split messages.
 
-INSERT A PRINT
+1. Click on the messages guide;
 
-#### How it works ####
+![](/img/flow/flow35.png)
 
-Let's say that you are executing a study about adhesion therapy that the participants are invited to indicate how they are feeling every day - healthy or sick:
+2. On the button left, click on Create Label;
 
-INSERT A PRINT
+![](/img/flow/flow36.png)
 
-Adding the action Add label after the RuleSet “Wait for Health” allows to filter responses that pass for a particular category. On the example above, we added an Add Label action in a branch that passes by the “Sick” category. So, only the responses registered as “Sick” will be select. You can see the messages, nav to the messages guide and click on the label “Sick”.
+3. Then, you can give a name to the new label;
 
-#### Adding a Label ####
+![](/img/flow/flow37.png)
 
+## How it works ##
+Let's say that you are executing a study about adhesion therapy that the participants are invited to indicate how they are feeling every day - healthy or sick. Adding the action Add label after the RuleSet “Wait for Health” allows to filter responses that pass for a particular category.
+
+## Adding a Label ##
 Add a label is so easy as create an ActionSet, or add an ActionSet to an ActionSet existent. You can choose an existent label or create a new using the Add Label dialog box.
 
-INSERT A PRINT
+1. Go to the flow editor;
+
+2. Click and drag the red box on the action to create a ActionSet;
+
+3. Click on Add a Label to a Message;
+
+![](/img/flow/flow38.png)
+
+4. Choose one or more labels.
+
+![](/img/flow/flow39.png)
+
