--- a/en/flows/06.13-Sending an Email.md
+++ b/en/flows/06.13-Sending an Email.md
@@ -1,26 +1,37 @@
-**Use the *Send an Email* to send an Email using the flow. The resulting email can contain values referred using:**
+Use the Send an Email to send an Email using the flow. The resulting email can contain values referred using:
 
-@contact variáveis
-@flow variáveis
-@date
-@channel
-@step
-@extra
-expressões, ex.: @ (HOUR (NOW ()))
+- @contact
 
-#### To send an Email ####
+- @flow
+
+- @date
+
+- @channel
+
+- @step
+
+- @extra, ex.: @ (HOUR (NOW ()))
+
+## To send an Email ##
 1. Go to your flow;
+
+![](/img/flow/flow40.png)
+
 2. Click on and drag the red box to create a new action command.
+
+![](/img/flow/flow41.png)
+
 3. Select the option Send an Email on the drop-down menu.
 
-INSERT A PRINT
+![](/img/flow/flow42.png)
 
-On the example below, we demonstrate how a company can use this action to send an email with a notification to the team informing that there is a client is requesting information about a product.
+On the example above, we demonstrated how a company can use this action to send an email with a notification to the team informing that there is a client is requesting information about a product.
 
-#### Creating a Pipeline Email ####
+## Creating a Pipeline Email ##
 
-This action is a super simple way to send a question from a contact to a team member. You just need to create a flow asking for a contact name, question and favorite response method, configure the RapidPro to send an email containing this information outside the RapidPro or slack channel. The team members are capable to instantaneously access the ticket through your CRM or Slack ID and response appropriately.
+This action is a super simple way to send a question from a contact to a team member. You just need to create a flow asking for a contact name, question and favorite response method, configure the platform to send an email containing this information outside the platform or slack channel. The team members are capable to instantaneously access the ticket through your CRM or Slack ID and response appropriately.
 
-INSERT A PRINT
+![](/img/flow/flow43.png)
 
-The variable @flow.first_name refer the contact name if you get it on the previous step, while @flow.order and @flow.favorite_channel refer the contact order and the way that you want to get the response (SMS, Call, Email), respectively. Notice that, if the field “Name”  is from a filled contact, you can replace @flow.name to @contact.name or @contact.first_name.
+The variable @flow.first_name refer the contact name if you get it on the previous step, while @flow.order and @flow.favorite_channel refer the contact order and the way that you want to get the response (SMS, Call, Email), respectively. Notice that, if the field “Name” is from a filled contact, you can replace @flow.name to @contact.name or @contact.first_name.
+
